add clap and remove clap